# rust-slack-webhook

./: Cargo.toml  README.md  rustfmt.toml
examples/: hello-world.rs
src/: attachment.rs  error.rs  hex.rs  lib.rs  macros.rs  slack.rs
