[package]
authors = [
  "Christopher Brickley <brickley@gmail.com>",
  "Eirik Albrigtsen <sszynrae@gmail.com>"
]
description = "A rust crate for sending messages to Slack via webhooks."
homepage = "https://github.com/clux/rust-slack"
keywords = ["slack", "webhook", "hook", "messaging"]
license = "MIT/Apache-2.0"
name = "slack-hook2"
readme = "README.md"
repository = "https://github.com/clux/rust-slack"
version = "0.9.0"
edition = "2018"

[dependencies]
chrono = "0.4"
hex = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
url = { version = "2", features = ["serde"] }
thiserror = "1.0.11"

[dependencies.reqwest]
version = "0.10.1"
default-features = false
features = ["json"]

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
