[package]
authors = [
  "Christopher Brickley <brickley@gmail.com>",
  "Eirik Albrigtsen <sszynrae@gmail.com>"
]
description = "A rust crate for sending messages to Slack via webhooks."
homepage = "https://github.com/clux/rust-slack"
keywords = ["slack", "webhook", "hook", "messaging"]
license = "MIT/Apache-2.0"
name = "slack-hook2"
readme = "README.md"
repository = "https://github.com/clux/rust-slack"
version = "0.10.0"
edition = "2018"

[dependencies]
chrono = "0.4"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = { version = "2", features = ["serde"] }
thiserror = "1.0"

[dependencies.reqwest]
version = "0.10.6"
default-features = false
features = ["json"]

[features]
default = ["rustls-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]

[dev-dependencies]
futures = "0.3"
tokio = { version = "0.2", features = ["macros"] }
